1. 修改jqgrid右鍵功能。 2. 測試動態產生jqgrid的方法

--- a/public/css/jQueryUI/Sampling_Records.css
+++ b/public/css/jQueryUI/Sampling_Records.css
@@ -293,3 +293,12 @@ body,button, input, select, textarea,h1 ,h2, h3, h4, h5, h6
     padding:3px;
     width:100px
   }
+
+#RightClickmenu{
+    position: absolute;;
+    border:1px solid #59b9cb;
+    background:white;
+    list-style:none;
+    padding:3px;
+    width:100px
+  }
